# cardio-trace-backend-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  entrypoint.sh  pyproject.toml
accounts/: exceptions.py  models.py  serializers.py  tests.py  urls.py  use_cases.py  views.py
accounts/migrations/: 0001_initial.py  0002_seed_default_tenant.py  0003_doctorprofile_surname_patientprofile_surname.py  0004_alter_user_auth0_user_id_and_more.py
accounts/tests/: test_use_cases_provision_user.py  test_use_cases_update_profile.py  test_views_me_profile_patch.py  test_views_users_post.py
config/: authentication.py  exception_handler.py  exceptions.py  settings.py  urls.py
config/tests/: __init__.py  test_authentication.py
devices/: exceptions.py  models.py  serializers.py  tests.py  urls.py  use_cases.py  views.py
devices/migrations/: 0001_initial.py  0002_device_created_at_device_updated_at_deviceassignment.py  0003_remove_deviceassignment_unique_device_assignment_per_tenant_and_more.py  0004_deviceassignment_valid_window_and_indexes.py  0005_device_uid.py
devices/tests/: test_use_cases_assign_device.py  test_use_cases_create_device.py  test_use_cases_delete_device_assignment.py  test_use_cases_stop_device_assignment.py  test_views_device_assignments_delete.py  test_views_device_assignments_post.py  test_views_devices_post.py  (+1 more)
docs/: backend-api-overview.md  model-proposal.md
measurements/: exceptions.py  models.py  serializers.py  urls.py  use_cases.py  views.py
tests/: auth.py  factories.py  mixins.py
(+14 files in other folders)
